Add ResponceMainPage, OpenMainPage, MainPage, TestData